[package]
name = "applying"
version = "1.0.0"
edition = "2021"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
description = "Apply functions in method-position."
homepage = "https://codeberg.org/fosskers/applying"
repository = "https://codeberg.org/fosskers/applying"
readme = "README.md"
license = "LGPL-3.0-only"
keywords = ["apply", "function"]
categories = ["rust-patterns"]
